src/objects/CT_Defaults__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Cole_Contact_ID__c</fullName>
        <defaultValue>&quot;0034P00002Tv9HHQAZ&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Cole Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Target_OZs__c</fullName>
        <defaultValue>31</defaultValue>
        <label>Daily Target OZs</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Food_Target_ML__c</fullName>
        <label>Food Target ML</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sleep_Target_Hours__c</fullName>
        <label>Sleep Target Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitamin_D_IU_Target__c</fullName>
        <label>Vitamin D IU Target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitamin_D_Per_Formula__c</fullName>
        <label>Vitamin D Per Formula ML</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitamin_D_per_Drop__c</fullName>
        <label>Vitamin D per Drop</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Cole Tracker Defaults</label>
</CustomObject>